--- a/admin.css
+++ b/admin.css
@@ -1,8 +1,18 @@
-label {
-    width: 250px;
+#pfa_options label,
+#pfa_meta_box label {
+    width: 200px;
     display: inline-block;
 }
 
-input[type="text"] {
+#pfa_options input[type="text"] {
     width: 400px;
+}
+
+#pfa_meta_box input[type="checkbox"] {
+    margin-left: 20px;
+}
+
+#pfa_meta_box textarea {
+    width: 100%;
+    height: 100px;
 }
