Changed style for administration settings
Changed style for administration settings. Using a textarea instead of a
text input field for the blocked message.

--- a/admin.css
+++ b/admin.css
@@ -2,6 +2,7 @@
 #pfa_meta_box label {
     width: 200px;
     display: inline-block;
+    vertical-align: top;
 }
 
 #pfa_options input[type="text"] {
@@ -12,7 +13,8 @@
     margin-left: 20px;
 }
 
+#pfa_options textarea,
 #pfa_meta_box textarea {
-    width: 100%;
+    width: 500px;
     height: 100px;
 }
